# face_classification

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  REQUIREMENTS.txt  package.xml  repository.debs  setup.py
datasets/fer2013/: README  fer2013.bib
gender/: data_loader.py  image_generator.py  models.py  test.py  train.py  utils.py  video_test.py  visualizer.py
gender/tests/: 2  class_ratio_test.py
old_code/: models.py  train.py  video_test.py
old_code/tests/: test.py
ros/doc/: README.md  pipeline.xml
ros/launch/: face_classification_simple.launch  face_classification_test.launch
ros/msg/: FaceClassification.msg  FaceClassificationArray.msg
ros/scripts/: face_classification_node
ros/srv/: FaceClassificationBuffered.srv  FaceClassificationContinuous.srv
src/: __init__.py  data_loader.py  demo.py  display_convolutional_filters.py  emotion_gender_image_test.py  emotion_gender_video_test.py  emotion_video_test.py  grad-CAMv2.py  grad_cam_image_test.py  grad_cam_video_test.py  image_emotion_demo.py  image_emotion_gender_demo.py  image_gradcam_demo.py  image_test.py  layers.py  models.py  run_experiments.sh  spatial_transformer.py  train.py  train_classifier.py  train_emotion_classifier.py  train_gender_classifier.py  utils.py  video_emotion_color_demo.py  video_emotion_gender_demo.py  video_gradcam_demo.py  video_test.py  visualizer.py
src/datasets/: __init__.py  fer.py  ferplus.py  imdb.py  utils.py
src/models/: __init__.py  blocks.py  cnn.py  densenet.py  detection.py  vgg.py  xception.py
src/processing/: __init__.py  pipelines.py  utils.py  vission_messages.py
src/scripts/: data_visualization.py
src/utils/: datasets.py  (+8 more)
trained_models/: fer2013_big_XCEPTION.54-0.66.hdf5  fer2013_mini_XCEPTION.119-0.65.hdf5
venv-face-classifier/: pip-selfcheck.json
(+34 files in other folders)
